PresentationCore reference added, Resources folder created, button image added

--- a/IliasRevitPluginTest_01/IliasRevitPluginTest_01.csproj
+++ b/IliasRevitPluginTest_01/IliasRevitPluginTest_01.csproj
@@ -34,6 +34,7 @@
     <ApplicationManifest>IliasRevitPluginTest_01.addin</ApplicationManifest>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="PresentationCore" />
     <Reference Include="RevitAPI">
       <HintPath>..\..\..\..\..\..\Program Files\Autodesk\Revit 2022\RevitAPI.dll</HintPath>
       <Private>False</Private>
@@ -59,6 +60,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="IliasRevitPluginTest_01.addin" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Resources\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
